# ShotWell

./: CMakeLists.txt  CMakePresets.json  INSTALL  README.md
cmake/: Doxygen.cmake  OneTBB.cmake  Precompiling.cmake
src/: CMakeLists.txt
src/capture/: CMakeLists.txt  main.cpp
